@@ -19,8 +19,10 @@ __svnid__ = "$Id$"
 __revision__ = "$Revision$"
 
 #-----------------------------------------------------------------------------#
+# Local Imports
 import synglob
 import cpp
+
 #-----------------------------------------------------------------------------#
 
 #---- Keyword Definitions ----#
@@ -86,6 +88,8 @@ def CommentPattern(lang_id=0):
         return list()
 
 #---- End Required Module Functions ----#
+
+AutoIndenter = cpp.AutoIndenter
 
 #---- Syntax Modules Internal Functions ----#
 def KeywordString():
